fix spacing for several components EATON-598

--- a/eaton.frontend/src/components/list/css/views/_view-related-products.scss
+++ b/eaton.frontend/src/components/list/css/views/_view-related-products.scss
@@ -1,6 +1,6 @@
 .related-products-component {
 
-  padding: 30px 0;
+  padding: 60px 0;
 
   &__text {
     padding-left: 15px;
