--- a/eaton.frontend/src/components/product-detail-card/css/product-detail-card.scss
+++ b/eaton.frontend/src/components/product-detail-card/css/product-detail-card.scss
@@ -14,6 +14,10 @@
 
 .product-detail-card {
 
+  &__related-products {
+    margin: 60px 0;
+  }
+
   &__related-products-header {
     padding-left: 15px;
     margin-bottom: 45px;
