--- a/eaton.frontend/src/shared/module-related-products/css/module-related-products.scss
+++ b/eaton.frontend/src/shared/module-related-products/css/module-related-products.scss
@@ -40,7 +40,7 @@
 
   &__arrows {
     position: absolute;
-    top: 25%;
+    top: 22%;
     color: $color__secondary-gray4;
     display: none !important; // stylelint-disable-line declaration-no-important
 
