--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-media-gallery/css/module-media-gallery.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-media-gallery/css/module-media-gallery.css
@@ -31,6 +31,8 @@ body.zoom-overlay-open { overflow: hidden; }
 
 @media screen and (min-width: 992px) { .zoom-overlay { display: none !important; } }
 
+.module-media-gallery { margin: 60px 0; }
+
 .module-media-gallery__header, .module-media-gallery__description { margin-bottom: 30px; }
 
 .module-media-gallery__headline { margin-bottom: 30px; }
@@ -79,8 +81,7 @@ body.zoom-overlay-open { overflow: hidden; }
   .module-media-gallery__dots button { display: inline; height: 10px; width: 10px; border: 10px; border-radius: 50%; font-size: 0; color: transparent; background-color: #EEF0F2; padding: 5px; }
   .module-media-gallery__thumbnail-container { display: none; } }
 
-@media screen and (min-width: 992px) { .module-media-gallery { padding: 60px 0 120px; }
-  .module-media-gallery__slide-container .module-media-gallery__arrows .icon { font-size: 37px; }
+@media screen and (min-width: 992px) { .module-media-gallery__slide-container .module-media-gallery__arrows .icon { font-size: 37px; }
   .module-media-gallery__slide-preview { margin: 0 0 30px; }
   .module-media-gallery__slide-info { margin: 0 0 30px; }
   .module-media-gallery__thumbnail-container .module-media-gallery__arrows .icon { font-size: 12px; }
